<resources>
    <string name="app_name">TelePatriot</string>

    <string name="admin_view">Admin View</string>
    <string name="chat_help">Chat/Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="default_notification_channel_id">AccountEvents</string>
    <string name="director_view">Director View</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is the description of Channel 1</string>
    <string name="list_users">List Users</string>
    <string name="search_users">Search Users</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="unassigned_users">Unassigned Users</string>
    <string name="volunteer_view">Volunteer View</string>

    <string name="some_dialog_title">some dialog title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>

    <!--
    In xcode, this list is in WrapUpViewController.swift   At some point, we should probably put this
    list in the database
    -->
    <string-array name="outcome_array">
        <item>Voicemail</item>
        <item>Talked on the phone</item>
        <item>3-way call</item>
        <item>Wrong number</item>
        <item>Number disconnected</item>
        <item>No answer</item>
    </string-array>

</resources>
