<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chat_help"
        android:title="@string/chat_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/volunteer_view_menu"
        android:title="@string/volunteer_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/director_view_menu"
        android:title="@string/director_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/admin_view_menu"
        android:title="@string/admin_view"
        app:showAsAction="never"/>

</menu>